公車路線抵達時間ver1

--- a/app/src/main/res/layout/bus_page.xml
+++ b/app/src/main/res/layout/bus_page.xml
@@ -17,7 +17,7 @@
         android:weightSum="1">
 
         <ListView
-            android:id="@+id/listViewEstimateTimeByRoute"
+            android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
