--- a/app/src/main/res/layout/route_or_station_detail.xml
+++ b/app/src/main/res/layout/route_or_station_detail.xml
@@ -7,7 +7,11 @@
         android:id="@+id/BusLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:autoText="false"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +34,8 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView" />
+        android:scrollbars="none" />
 </LinearLayout>
