--- a/app/src/main/res/layout/route_or_station_detail.xml
+++ b/app/src/main/res/layout/route_or_station_detail.xml
@@ -7,6 +7,8 @@
         android:id="@+id/BusLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:autoText="false"
         android:text="TextView"
         android:textAlignment="center"
@@ -20,6 +22,7 @@
 
         <Button
             android:id="@+id/GoDistance"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -27,6 +30,7 @@
 
         <Button
             android:id="@+id/BackDistance"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
