--- a/app/src/main/res/layout/station_item.xml
+++ b/app/src/main/res/layout/station_item.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/station"
+        android:id="@+id/busRoute"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
