--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -14,6 +14,8 @@
 
     <ListView
         android:id="@+id/listView"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
